--- a/CountryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/CountryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,1 +1,27 @@
-<p>by-country-page works!</p>
+<div class="capital">
+    <h2>Por Capital</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-search-box></app-search-box>
+        </div>
+    </div>
+    
+    <hr>
+</div>
+
+<div *ngIf="countries.length == 0" 
+     class="alert alert-danger">
+    No se encontró nada con el codigo: {{ cod }}
+</div>
+
+<div *ngIf="countries.length > 0" class="row">
+    <div class="col">
+
+        <app-country-tabla [countries]="countries"></app-country-tabla>
+
+
+    </div>
+</div>
+
