Ajuste del sidebar

--- a/CountryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/CountryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,5 +1,5 @@
 <div class="capital">
-    <h2>Por Capital</h2>
+    <h2>Por pais</h2>
     <hr>
     
     <div class="row">
@@ -18,10 +18,7 @@
 
 <div *ngIf="countries.length > 0" class="row">
     <div class="col">
-
         <app-country-tabla [countries]="countries"></app-country-tabla>
-
-
     </div>
 </div>
 
