--- a/CountryApp/src/app/shared/components/search-box/search-box.component.html
+++ b/CountryApp/src/app/shared/components/search-box/search-box.component.html
@@ -1,3 +1,3 @@
-<input type="text" (keyup)="onKeyUp($event)" placeholder="Introduce el nombre de la capital">
+<input type="text" (keyup)="onKeyUp($event)" placeholder="Introduce el nombre de la capital" class="form-control">
 
 
