--- a/CountryApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/CountryApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <div class="sidebar">
     <h2>Menú</h2>
     <ul class="list-unstyled">
-        <li><a href="#" [routerLink]="['/home']">Inicio</a></li>
-        <li><a href="#" [routerLink]="['/about']">Acerca de</a></li>
-        <li><a href="#" [routerLink]="['/contact']">Contacto</a></li>
-        <li><a href="#" [routerLink]="['/countries/','capital','by-capital']">Por Pais</a></li>
-        <li><a href="#" [routerLink]="['/countries/','capital','by-country']"> Por Capital</a></li>
-        <li><a href="#" [routerLink]="['/countries/','capital','by-region']">Por Region</a></li>
+        <li><a href="" [routerLink]="['/home']">Inicio</a></li>
+        <li><a href="" [routerLink]="['/about']">Acerca de</a></li>
+        <li><a href="" [routerLink]="['/contact']">Contacto</a></li>
+        <li><a href="" [routerLink]="['/pais/',':id']">Por Pais</a></li>
+        <li><a href="" [routerLink]="['/capital']"> Por Capital</a></li>
+        <li><a href="" [routerLink]="['/region/']">Por Region</a></li>
     </ul>
   </div>
