--- a/CountryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/CountryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,18 @@
-<p>by-region-page works!</p>
+<div class="region">
+    <h3>Buscar por región</h3>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-search-box></app-search-box>
+        </div>
+    </div>
+    
+    <hr>  
+</div>
+
+<div *ngIf="countries.length > 0" class="row">
+    <div class="col">
+        <app-country-tabla [countries]="countries"></app-country-tabla>
+    </div>
+</div>
