--- a/CountryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/CountryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,23 +4,15 @@
     
     <div class="row">
         <div class="col">
-            <app-search-box></app-search-box>
+            <app-country-input (onEnter)="buscar( $event )" placeholder="Busca algo..."></app-country-input>
         </div>
     </div>
     
     <hr>
 </div>
 
-<div *ngIf="countries.length == 0" 
-     class="alert alert-danger">
-    No se encontró nada con el codigo: {{ cod }}
-</div>
-
 <div *ngIf="countries.length > 0" class="row">
     <div class="col">
-
         <app-country-tabla [countries]="countries"></app-country-tabla>
-
-
     </div>
 </div>
