--- a/CountryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/CountryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,24 +1,44 @@
-<div class="capital">
-    <h2>Por pais</h2>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por País</h2>
     <hr>
     
     <div class="row">
         <div class="col">
-            <app-search-box></app-search-box>
+            <app-country-input (onEnter)="buscar( $event )" placeholder="Busca algo..."></app-country-input>
         </div>
     </div>
     
+    <ul *ngIf="mostrarSugerencias"
+        class="list-group">
+        <li *ngFor="let country of paisesSugeridos"
+            class="list-group-item list-group-item-action">
+            <a class="nav-link"
+               [routerLink]="['/pais', country.cca3]">
+                {{ country.name }}
+            </a>
+        </li>
+        <li class="list-group-item list-group-item-action"
+            (click)="buscarSugerido( cod )">
+            <a class="nav-link">
+                Buscar "{{ cod }}"
+            </a>
+        </li>
+    </ul>
     <hr>
+
 </div>
 
-<div *ngIf="countries.length == 0" 
+<div *ngIf="hayError" 
      class="alert alert-danger">
-    No se encontró nada con el codigo: {{ cod }}
+    No se encontró nada con el término {{ cod }}
 </div>
 
 <div *ngIf="countries.length > 0" class="row">
     <div class="col">
+
         <app-country-tabla [countries]="countries"></app-country-tabla>
+
+
     </div>
 </div>
 
