--- a/CountryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/CountryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,14 +1,27 @@
-<div class="region">
-    <h3>Buscar por región</h3>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h3>Buscar por region <small> {{ regionActiva | titlecase }} </small></h3>
     <hr>
+    
+    <h5>Seleccione la region</h5>
     
     <div class="row">
         <div class="col">
-            <app-search-box></app-search-box>
+            
+            <!-- [class.btn-primary]="region === regionActiva" -->
+            <!-- [ngClass]="{
+                'btn-primary': regionActiva === region,
+                'btn-outline-primary': regionActiva !== region
+            }"-->
+    
+            <button *ngFor="let region of regiones"
+                    [class]="getClaseCSS( region )"
+                    (click)="activarRegion( region )">
+                {{ region | titlecase }}
+            </button>
+    
         </div>
     </div>
-    
-    <hr>  
+
 </div>
 
 <div *ngIf="countries.length > 0" class="row">
