--- a/CountryApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/CountryApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
         <li class="list-group-item"><a href="" [routerLink]="['/home']">Inicio</a></li>
         <li class="list-group-item"><a href="" [routerLink]="['/about']">Acerca de</a></li>
         <li class="list-group-item"><a href="" [routerLink]="['/contact']">Contacto</a></li>
-        <li class="list-group-item"><a href="" [routerLink]="''">Por Pais</a></li>
+        <li class="list-group-item"><a href="" [routerLink]="['/pais']">Por Pais</a></li>
         <li class="list-group-item"><a href="" [routerLink]="['/capital']"> Por Capital</a></li>
         <li class="list-group-item"><a href="" [routerLink]="['/region/']">Por Region</a></li>
     </ul>
