--- a/CountryApp/src/app/countries/component/country-tabla/country-tabla.component.html
+++ b/CountryApp/src/app/countries/component/country-tabla/country-tabla.component.html
@@ -23,11 +23,11 @@ No hay países que mostrar...
             <td>
                 <img class="small-flag" [src]="country.flags.png" >
             </td>
-            <td> {{ country.name }}</td>
+            <td> {{ country.name.common }}</td>
             <td>{{ country.capital }}</td>
             <td>{{ country.population}}</td>
             <td>
-                <a [routerLink]="['/pais','/:id']">Ver mas...</a>
+                <a [routerLink]="['/verPais/',country.cca3]">Ver mas...</a>
             </td>
   </tr>
 </tbody>
