--- a/CountryApp/src/app/countries/pages/view-country/view-country.component.html
+++ b/CountryApp/src/app/countries/pages/view-country/view-country.component.html
@@ -9,7 +9,7 @@
 
     <div class="row">
         <div class="col-12">
-            <h1>País: <small>{{ country.name }}</small></h1>
+            <h1>País: <small>{{ country.name.common }}</small></h1>
         </div>
     </div>
 
@@ -17,20 +17,20 @@
         
         <div class="col-4">
             <h3>Bandera</h3>
-            <img [src]="country.flags.png" class="img-thumbnail" />
+            <img [src]="country.flags.svg" class="img-thumbnail" />
         </div>
 
         <div class="col">
             <h3>Información</h3>
             <ul class="list-group">
                 <li class="list-group-item">
-                    <strong>Población</strong> {{ country.population }}
+                    <strong>Población: </strong> {{ country.population }} 
                 </li>
                 <li class="list-group-item">
-                    <strong>Código numérico</strong> {{ country.numericCode }}
+                    <strong>TimeZone: </strong> [{{ country.timezones }}]
                 </li>
                 <li class="list-group-item">
-                    <strong>Código </strong> {{ country.cca3 }}
+                    <strong>Maps: </strong> <a href="{{country.maps.googleMaps }}">Google Maps</a>
                 </li>
             </ul>
         </div>
@@ -42,16 +42,16 @@
     <div class="row">
         <div class="col">
             
-            <span class="badge bg-primary mr-1">{{ country.translations.ara }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.por }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.rus }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.spa }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.deu }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.fra }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.ita }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.jpn }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.pol }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.tur }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.ara.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.por.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.rus.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.spa.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.deu.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.fra.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.ita.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.jpn.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.pol.common }}</span>
+            <span class="badge bg-primary mr-1">{{ country.translations.tur.common }}</span>
 
         </div>
     </div>
