--- a/CountryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/CountryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col">
 
-        <button *ngFor="let region of regiones" (click)="activarRegion( region )">
+        <button *ngFor="let region of regiones" (click)="activarRegion( region )" class="btn btn-dark">
             {{ region }}
         </button>
 
