--- a/CountryApp/src/app/countries/pages/view-country/view-country.component.html
+++ b/CountryApp/src/app/countries/pages/view-country/view-country.component.html
@@ -1,59 +1,50 @@
 <div *ngIf="!country; else divPais"  
-    class="alert alert-info">
+    class="alert alert-info custom-alert">
     Espere por favor...
 </div>
 
-
-
 <ng-template #divPais>
-
-    <div class="row">
+    <div class="row country-info">
         <div class="col-12">
-            <h1>País: <small>{{ country.name.common }}</small></h1>
+            <h1 class="country-name">País: <small>{{ country.name.common }}</small></h1>
         </div>
     </div>
 
     <div class="row">
-        
         <div class="col-4">
-            <h3>Bandera</h3>
-            <img [src]="country.flags.svg" class="img-thumbnail" />
+            <h3 class="section-title">Bandera</h3>
+            <img [src]="country.flags.svg" class="img-thumbnail country-flag" />
         </div>
 
         <div class="col">
-            <h3>Información</h3>
-            <ul class="list-group">
+            <h3 class="section-title">Información</h3>
+            <ul class="list-group country-info-list">
                 <li class="list-group-item">
-                    <strong>Población: </strong> {{ country.population }} 
+                    <strong class="info-label">Población: </strong> {{ country.population }} 
                 </li>
                 <li class="list-group-item">
-                    <strong>TimeZone: </strong> [{{ country.timezones }}]
+                    <strong class="info-label">TimeZone: </strong> [{{ country.timezones }}]
                 </li>
                 <li class="list-group-item">
-                    <strong>Maps: </strong> <a href="{{country.maps.googleMaps }}">Google Maps</a>
+                    <strong class="info-label">Maps: </strong> <a href="{{country.maps.googleMaps }}" class="info-link">Google Maps</a>
                 </li>
             </ul>
         </div>
-
-
     </div>
 
-    <h3>Traducciones</h3>
+    <h3 class="section-title">Traducciones</h3>
     <div class="row">
         <div class="col">
-            
-            <span class="badge bg-primary mr-1">{{ country.translations.ara.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.por.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.rus.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.spa.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.deu.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.fra.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.ita.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.jpn.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.pol.common }}</span>
-            <span class="badge bg-primary mr-1">{{ country.translations.tur.common }}</span>
-
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.ara.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.por.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.rus.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.spa.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.deu.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.fra.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.ita.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.jpn.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.pol.common }}</span>
+            <span class="badge bg-primary mr-1 translation-badge">{{ country.translations.tur.common }}</span>
         </div>
     </div>
-
 </ng-template>
